--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
-  "name": "jquery-jsonform",
-  "version": "1.0.0",
-  "description": "Overview",
-  "main": "webpack.config.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/etechfocus/jquery-jsonform.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/etechfocus/jquery-jsonform/issues"
-  },
-  "homepage": "https://github.com/etechfocus/jquery-jsonform#readme",
-  "dependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.0.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1"
-  }
+    "name": "jquery-jsonform",
+    "version": "1.0.0",
+    "description": "Overview",
+    "main": "webpack.config.js",
+    "scripts": {
+        "build": "webpack",
+        "start": "webpack --watch"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/etechfocus/jquery-jsonform.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/etechfocus/jquery-jsonform/issues"
+    },
+    "homepage": "https://github.com/etechfocus/jquery-jsonform#readme",
+    "dependencies": {
+        "@babel/core": "^7.4.5",
+        "@babel/preset-env": "^7.4.5",
+        "babel-loader": "^8.0.6",
+        "css-loader": "^3.0.0",
+        "node-sass": "^4.12.0",
+        "sass-loader": "^7.1.0",
+        "style-loader": "^0.23.1"
+    },
+    "devDependencies": {
+        "mini-css-extract-plugin": "^0.7.0",
+        "webpack": "^4.34.0",
+        "webpack-cli": "^3.3.4"
+    }
 }
