--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "css-loader": "^3.0.0",
         "node-sass": "^4.12.0",
         "sass-loader": "^7.1.0",
+        "script-loader": "^0.7.2",
         "style-loader": "^0.23.1"
     },
     "devDependencies": {
