--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "homepage": "https://github.com/etechfocus/jquery-jsonform#readme",
     "dependencies": {},
     "devDependencies": {
-        "mini-css-extract-plugin": "^0.7.0",
-        "webpack": "^4.34.0",
-        "webpack-cli": "^3.3.4",
         "@babel/core": "^7.4.5",
         "@babel/preset-env": "^7.4.5",
         "babel-loader": "^8.0.6",
         "css-loader": "^3.0.0",
+        "mini-css-extract-plugin": "^0.7.0",
         "node-sass": "^4.12.0",
+        "optimize-css-assets-webpack-plugin": "^5.0.1",
         "sass-loader": "^7.1.0",
-        "style-loader": "^0.23.1"
+        "style-loader": "^0.23.1",
+        "webpack": "^4.34.0",
+        "webpack-cli": "^3.3.4"
     }
 }
